// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[EditText] Type: [row] - default renders without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "stretch",
          "borderBottomColor": "#666666",
          "borderBottomWidth": 0.3,
          "flexDirection": "column",
          "justifyContent": "space-between",
        },
        Object {
          "borderBottomColor": "#999999",
          "borderColor": "#999999",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#b9b9c4",
            "fontSize": 14,
          },
          undefined,
          Object {
            "color": "#999999",
          },
        ]
      }
    >
      label text
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "color": "#2c374e",
            "fontSize": 14,
            "fontWeight": "bold",
            "paddingVertical": 12,
          },
          undefined,
          false,
        ]
      }
      testID="INPUT_TEST"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`[EditText] Type: [row] renders without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "borderBottomColor": "#666666",
          "borderBottomWidth": 0.3,
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        Object {
          "borderBottomColor": "#999999",
          "borderColor": "#999999",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#b9b9c4",
            "fontSize": 14,
            "width": 100,
          },
          undefined,
          Object {
            "color": "#999999",
          },
        ]
      }
    >
      
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "color": "#2c374e",
            "flex": 1,
            "fontSize": 14,
            "fontWeight": "bold",
            "paddingHorizontal": 8,
            "paddingVertical": 12,
          },
          undefined,
          false,
        ]
      }
      testID="INPUT_TEST"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;
